# rust-lambda-cdk

./: README.md  cdk.json  package-lock.json  package.json
cdk-lambda/: Cargo.toml
lib/: rust-function.ts  rust-lambda-cdk-stack.ts
test/: rust-lambda-cdk.test.ts
