[package]
name = "cdk-lambda"
version = "0.1.0"
authors = ["Markus Bergkvist <markus@familjenbergkvist.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
serde_json = "1.0.64"
tokio = "1.6.0"

[profile.release]
codegen-units = 1
lto = true
