[package]
name = "cdk-lambda"
version = "0.1.0"
authors = ["Markus Bergkvist <markus@familjenbergkvist.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.3-alpha", package = "aws-sdk-dynamodb" }
lambda_runtime = "0.3.0"
lazy_static = "1.4.0"
serde_json = "1.0.64"
tokio = "1.6.0"

[profile.release]
codegen-units = 1
lto = true
